Input limit change
Made the input element's arrows min and max limits the specific
counter's acceptable values

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button class="up">Up</button>
                 <button class="down">Down</button>
                 <button class="get">Get</button>
-                <input class="value" type="number" placeholder="0 - 9">
+                <input class="value" type="number" placeholder="0 - 9" min="0" max="9">
                 <button class="set">Set</button>
                 <button class="reset">Reset</button>
             </form>
@@ -24,7 +24,7 @@
                 <button class="up">Up</button>
                 <button class="down">Down</button>
                 <button class="get">Get</button>
-                <input class="value" type="number" placeholder="0 - 99">
+                <input class="value" type="number" placeholder="0 - 99" min="0" max="99">
                 <button class="set">Set</button>
                 <button class="reset">Reset</button>
             </form>
@@ -36,7 +36,7 @@
                 <button class="up">Up</button>
                 <button class="down">Down</button>
                 <button class="get">Get</button>
-                <input class="value" type="number" placeholder="0 - 9999">
+                <input class="value" type="number" placeholder="0 - 9999" min="0" max="9999">
                 <button class="set">Set</button>
                 <button class="reset">Reset</button>
             </form>
